--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Amalan Ramadhan Siswa</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
+    // Konfigurasi default aplikasi
     const DEFAULT_CONFIG = {
         app_title: "Amalan Ramadhan Siswa",
         bank_name: "BANK RAKYAT INDONESIA (BRI)",
@@ -14,6 +15,7 @@
         master_password: "admin"
     };
 
+    // URL Backend (Google Apps Script)
     const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbx7IjJZdiHITMGhSMSWWneT1E9qIWUOBwkuJv4krc4_IPk-pQYA1hgFXyNfMu9oKjr6Bw/exec';
 
     const loadLocalConfig = () => {
@@ -102,7 +104,7 @@
 
         // --- STATE ---
         let SCHOOL_ID = getSchoolId();
-        let schoolName = "Akses Aplikasi Siswa"; // Default subtitle
+        let schoolName = "Akses Aplikasi Siswa"; 
         let currentUser = null;
         let currentTab = 'Shalat Fardu';
         let currentAdminTab = 'config'; 
@@ -177,14 +179,12 @@
             return window.elementSdk.config;
         }
 
-        // Fungsi baru untuk mendapatkan nama sekolah pendaftar secara otomatis
         async function fetchCurrentSchoolName() {
             if (!SCHOOL_ID) return;
             try {
                 const res = await fetch(`${GOOGLE_SCRIPT_URL}?action=getTeachersList`);
                 const data = await res.json();
                 if (data.status === 'success' && Array.isArray(data.teachers)) {
-                    // Mencari sekolah yang memiliki ID Spreadsheet yang sama dengan URL
                     const schoolData = data.teachers.find(t => t.ss_id === SCHOOL_ID);
                     if (schoolData) {
                         schoolName = schoolData.school;
@@ -342,7 +342,7 @@
                                 <div><label class="block text-[10px] font-bold text-slate-400 uppercase px-2 mb-1 tracking-widest text-left">Nama Sekolah</label><input type="text" id="regSchool" placeholder="Nama Sekolah" class="w-full p-4 bg-slate-50 border-2 border-transparent rounded-2xl outline-none font-bold focus:border-emerald-500 transition-all text-slate-800" required></div>
                                 <button type="submit" id="btnNextStep" class="w-full bg-emerald-600 text-white p-5 rounded-2xl font-black shadow-xl hover:scale-[1.02] transition-all uppercase tracking-widest">Lanjut ke Pembayaran</button>
                             </form>
-                            <button onclick="checkAdminAccess()" class="mt-8 text-[10px] font-bold text-slate-400 hover:text-emerald-800 transition-all uppercase tracking-[0.3em]">Master Login</button>
+                            <!-- BERUBAH: Baris Login Master telah dihapus/disembunyikan dari sini -->
                         </div>
                         <div id="step-2" class="hidden space-y-6">
                             <div id="dynamicPayment"></div>
@@ -445,7 +445,6 @@
                 <div class="min-h-screen bg-emerald-600 flex items-center justify-center p-4">
                     <div class="w-full max-w-md bg-white rounded-[2.5rem] shadow-2xl p-8 animate-in fade-in zoom-in duration-500 text-center text-slate-800">
                         <h1 class="text-3xl font-black text-emerald-800 mb-2 uppercase tracking-tight">${config.app_title}</h1>
-                        <!-- BERUBAH: Teks "Akses Aplikasi Siswa" diganti variabel schoolName -->
                         <p class="text-xs text-gray-400 mb-8 uppercase tracking-widest font-bold">${schoolName}</p>
                         <form id="loginForm" class="space-y-4 text-left">
                             <div><label class="block mb-1 font-bold text-[10px] uppercase text-gray-400 px-2 tracking-widest text-left">Nama Lengkap Siswa</label><input type="text" id="nama" class="w-full px-5 py-4 bg-slate-50 border-2 border-transparent rounded-2xl outline-none focus:border-emerald-500 transition-all uppercase font-bold text-slate-800" placeholder="Ketik Nama Anda"></div>
@@ -643,13 +642,14 @@
                 const kel = document.getElementById('fKelas').value;
                 const nam = document.getElementById('fNama').value.toLowerCase();
                 const filtered = studentList.filter(s => {
-                    const m1 = ting === 'all' || s.kelas.startsWith(ting);
+                    const m1 = ting === 'all' || s.kelas.toString().startsWith(ting);
                     const m2 = kel === 'all' || s.kelas === kel;
                     const m3 = s.nama.toLowerCase().includes(nam);
                     return m1 && m2 && m3;
                 });
                 if (filtered.length === 0) { grid.innerHTML = `<div class="col-span-full p-12 bg-white rounded-2xl text-center text-gray-400 italic">Siswa tidak ditemukan.</div>`; return; }
                 grid.innerHTML = filtered.map(s => `<div class="bg-white p-5 rounded-2xl shadow-sm border hover:border-emerald-500 cursor-pointer transition-all student-card" data-n="${s.nama}" data-k="${s.kelas}"><div class="flex justify-between items-start"><div><h3 class="font-black text-gray-800 uppercase text-left">${s.nama}</h3><p class="text-xs font-bold text-emerald-600 mt-1 uppercase text-left">Kelas: ${s.kelas}</p></div><span class="text-[10px] bg-emerald-50 text-emerald-700 px-2 py-1 rounded-lg font-bold border border-emerald-100 uppercase">Detail</span></div></div>`).join('');
+                
                 grid.querySelectorAll('.student-card').forEach(c => {
                     c.onclick = () => showStudentDetailView({ nama: c.dataset.n.trim(), kelas: c.dataset.k.trim() }, data);
                 });
@@ -666,6 +666,7 @@
                 r.nama.toString().trim() == student.nama && 
                 r.kelas.toString().trim() == student.kelas
             );
+
             document.getElementById('app').innerHTML = `
                 <div class="min-h-screen bg-slate-50 p-6 text-slate-800 text-center">
                     <div class="max-w-4xl mx-auto text-center">
@@ -688,7 +689,7 @@
         function handleCetakGlobal(ting, kel, allData) {
             const printWindow = window.open('', '_blank');
             let students = [...new Set(allData.map(r => JSON.stringify({nama: r.nama, kelas: r.kelas})))].map(s => JSON.parse(s));
-            if(ting !== 'all') students = students.filter(s => s.kelas.startsWith(ting));
+            if(ting !== 'all') students = students.filter(s => s.kelas.toString().startsWith(ting));
             if(kel !== 'all') students = students.filter(s => s.kelas === kel);
             students.sort((a,b) => a.nama.localeCompare(b.nama));
             let html = `<html><head><title>Laporan Global</title><style>body{font-family:Arial;padding:30px;font-size:12px}table{width:100%;border-collapse:collapse;margin-top:10px}th,td{border:1px solid #000;padding:8px;text-align:center}.header{text-align:center;margin-bottom:30px}</style></head><body><div class="header"><h2>REKAPITULASI AMALAN RAMADHAN SISWA</h2><div>Tingkat: ${ting} | Kelas: ${kel}</div></div><table><thead><tr><th>No</th><th>Nama Siswa</th><th>Kelas</th><th>Total Data</th><th>Status</th></tr></thead><tbody>`;
@@ -704,7 +705,7 @@
                 const items = data.filter(r => r.kategori === cat).sort((a,b) => parseInt(a.tanggal) - parseInt(b.tanggal));
                 if(items.length > 0) { html += `<h3>${cat}</h3><table><thead><tr><th width="60" align="center">Hari</th><th>Detail Amalan</th></tr></thead><tbody>`; items.forEach(r => html += `<tr><td align="center">${r.tanggal}</td><td>${renderDetailText(cat, r.detail)}</td></tr>`); html += `</tbody></table>`; }
             });
-            html += `<div style="margin-top:50px;text-align:right">Sumedang, ${new Date().toLocaleDateString('id-ID')}<br><br><br><br>( ............................... )</div><script>window.print();<\/script></body></html>`;
+            html += `<div style="margin-top:50px;text-align:right">Dicetak pada: ${new Date().toLocaleDateString('id-ID')}<br><br><br><br>( ............................... )</div><script>window.print();<\/script></body></html>`;
             printWindow.document.write(html); printWindow.document.close();
         }
 
@@ -712,7 +713,6 @@
             if (!SCHOOL_ID) {
                 renderLanding(); 
             } else {
-                // Menjalankan pencarian nama sekolah sebelum login siswa ditampilkan
                 await fetchCurrentSchoolName();
                 showLoginPage(); 
             }
